# Stockfish

./: .gitignore  CMakeLists.osx.m1.txt  CMakeLists.txt  CMakeLists.windows.txt  README.md
cmake/: arch_aarch64.cmake  arch_amd64.cmake  arch_arm64.cmake  arch_armv7.cmake  arch_armv8.cmake  arch_i386.cmake  arch_ppc32.cmake  arch_ppc64.cmake  default_stockfish_settings.cmake  generic_32.cmake  generic_64.cmake
include/: evaluate.h  thread.h
include/interface/: interface.h
src/: evaluate.cpp  main.cpp  search.cpp  thread.cpp  uci.cpp
src/interface/: interface.cpp
src/jni_adapter/: stockfishjni.cpp
src/nnue/: evaluate_nnue.cpp
src/nnue/features/: half_kp.cpp
src/syzygy/: tbprobe.cpp
src/test_exec/: main.cpp
stockfish_jni/jni_include/: it_matlice_stockfish_Stockfish.h
stockfish_jni/src/it/matlice/: EntryPoint.java
stockfish_jni/src/it/matlice/stockfish/: Stockfish.java
